--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,2 @@
-@import url('./ui/styles/variables.css');
-@import url('./ui/styles/base.css');
+@import url("./ui/styles/variables.css");
+@import url("./ui/styles/base.css");
