--- a/src/ui-rewrite/NotificationBar.css
+++ b/src/ui-rewrite/NotificationBar.css
@@ -31,11 +31,11 @@
 }
 
 .notification-info {
-  background-color: #2196F3;
+  background-color: #2196f3;
 }
 
 .notification-success {
-  background-color: #4CAF50;
+  background-color: #4caf50;
 }
 
 .notification-warning {
