--- a/src/ui/NoteEditor.css
+++ b/src/ui/NoteEditor.css
@@ -27,7 +27,8 @@
   border-radius: 0;
   background-color: transparent;
   color: var(--text-color);
-  transition: border-color var(--transition-duration) var(--transition-timing-function);
+  transition: border-color var(--transition-duration)
+    var(--transition-timing-function);
 }
 
 .note-title-input:focus {
@@ -56,7 +57,8 @@
   line-height: var(--line-height-base);
   color: var(--text-color);
   background-color: var(--background-color);
-  transition: border-color var(--transition-duration) var(--transition-timing-function);
+  transition: border-color var(--transition-duration)
+    var(--transition-timing-function);
 }
 
 .tiptap-editor:focus-within {
